Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 <a id="semana-6-febrero-27" class="anchor" href="#semana-6-febrero-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 6) Febrero 27</h3>
 
 <ul>
-<li>Angélica de Dios. New Horizons, Mission to Pluto.</li>
+<li>Angélica de Dios. <a href="https://prezi.com/vtfqgddwoxx9/new-horizons/">New Horizons, Mission to Pluto.</a>
+</li>
 <li>John Ricardo Escorcia. Misteriosas nubes en Marte.</li>
 </ul>
 
