Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Astrolunch by forero</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -22,7 +22,7 @@
       <h2>
 <a id="astrolunch" class="anchor" href="#astrolunch" aria-hidden="true"><span class="octicon octicon-link"></span></a>Astrolunch</h2>
 
-<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>AU403</strong> los viernes de 1PM a 1:50PM.</p>
+<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>R112</strong> los viernes de 1PM a 1:50PM.</p>
 
 <p>Hablamos de noticias astronómicas, vemos charlas de invitados y desarrollamos pequeños proyectos. Siempre procuramos presentar temas actuales de investigación de una manera accesible a un público con formación no especializada en astronomía (desde estudiantes de primer semetre de matemáticas hasta profesores en química, pasando por estudiantes de doctorado en biología).</p>
 
@@ -33,7 +33,7 @@
 <h2>
 <a id="proyectos" class="anchor" href="#proyectos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Proyectos</h2>
 
-<p>Esta es la <a href="https://github.com/forero/TallerAstronomia/blob/master/projects/201510/projects.md">lista de proyectos disponibles</a>.</p>
+<p>Esta es la <a href="https://github.com/forero/TallerAstronomia/blob/master/projects/201520/projects.md">lista de proyectos disponibles</a>.</p>
 
 <h2>
 <a id="programa" class="anchor" href="#programa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programa</h2>
@@ -108,11 +108,10 @@
 </ul>
 
 <h3>
-<a id="semana-9-marzo-20" class="anchor" href="#semana-9-marzo-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 9) Marzo 20</h3>
+<a id="semana-9-septiembre-25" class="anchor" href="#semana-9-septiembre-25" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 9) Septiembre 25</h3>
 
 <ul>
-<li>Paola Castaño. Comunicación Científica y Astronomía.</li>
-<li>Diego Fernando Martínez. Lo que existe más allá de las ecuaciones.</li>
+<li>Receso</li>
 </ul>
 
 <h3>
@@ -164,6 +163,9 @@
 </li>
 </ul>
 
+<h3>
+<a id="semana-16" class="anchor" href="#semana-16" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 16)</h3>
+
 <h2>
 <a id="enlaces" class="anchor" href="#enlaces" aria-hidden="true"><span class="octicon octicon-link"></span></a>Enlaces</h2>
 
@@ -198,4 +200,3 @@
   
   </body>
 </html>
-
