--- a/index.html
+++ b/index.html
@@ -39,72 +39,57 @@
 <a id="programa" class="anchor" href="#programa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programa</h2>
 
 <h3>
-<a id="semana-1-enero-23" class="anchor" href="#semana-1-enero-23" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 1) Enero 23</h3>
+<a id="semana-1-julio-31" class="anchor" href="#semana-1-julio-31" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 1) Julio 31</h3>
 
 <ul>
 <li>Jaime Forero. Cómo funciona Astrolunch.</li>
 </ul>
 
 <h3>
-<a id="semana-2-enero-30" class="anchor" href="#semana-2-enero-30" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 2) Enero 30</h3>
+<a id="semana-2-agosto-7" class="anchor" href="#semana-2-agosto-7" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 7</h3>
 
 <ul>
-<li>Verónica Arias. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201510/20150130_VeronicaArias.pdf?raw=true">Las galaxias satélite y su extraña distribución espacial</a>.</li>
-<li>Juan Nicolás Garavito. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201510/20150130_NicolasGaravito.pdf?raw=true">Grupos de Galaxias</a>.</li>
-<li>Jaime Forero. Proyectos disponibles para astrolunch.</li>
+<li><strong>Feriado</strong></li>
 </ul>
 
 <h3>
-<a id="semana-3-febrero-6" class="anchor" href="#semana-3-febrero-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 3) Febrero 6</h3>
+<a id="semana-3-agosto-14" class="anchor" href="#semana-3-agosto-14" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 14</h3>
 
 <ul>
-<li><strong>Elección de proyectos</strong></li>
-<li>Kevin González. 11 mil millones de años permiten la existencia del sistema planetario más antiguo del universo.</li>
+<li>Jesús Prada. Resultados pasantía de Cornell.</li>
 </ul>
 
 <h3>
-<a id="semana-4-febrero-13" class="anchor" href="#semana-4-febrero-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 4) Febrero 13</h3>
+<a id="semana-4-agosto-21" class="anchor" href="#semana-4-agosto-21" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 21</h3>
 
 <ul>
-<li>Kevin Andrade. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201510/20150212_KevinAndrade.pdf?raw=true">Astronomers Catch Mysterious Radio Blast From The Distant Universe.</a>
-</li>
-<li>Diego Umaña. <a href="https://github.com/forero/TallerAstronomia/raw/master/pdf/201510/20150213_DiegoUmana.pdf">Midiendo la distancia a la galaxia M82 desde Villa de Leyva.</a>
-</li>
+<li>Felipe Gómez. Relación entre taza de formación estelar y masa de materia oscura.</li>
 </ul>
 
 <h3>
-<a id="semana-5-febrero-20" class="anchor" href="#semana-5-febrero-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 5) Febrero 20</h3>
+<a id="semana-5-agosto-28" class="anchor" href="#semana-5-agosto-28" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 28</h3>
 
 <ul>
-<li>Jaime Forero. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201510/20150220_JaimeForero.pdf?raw=true">Astronomía Periférica: un proyecto de arte y astronomía en Bogotá.</a>
-</li>
+<li>Sergio Hernández. Resultados pasantía de Fermilab.</li>
 </ul>
 
 <h3>
-<a id="semana-6-febrero-27" class="anchor" href="#semana-6-febrero-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 6) Febrero 27</h3>
+<a id="semana-6-septiembre-4" class="anchor" href="#semana-6-septiembre-4" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 6) Septiembre 4</h3>
 
 <ul>
-<li>Angélica de Dios. <a href="https://prezi.com/vtfqgddwoxx9/new-horizons/">New Horizons, Mission to Pluto.</a>
-</li>
-<li>John Ricardo Escorcia. Misteriosas nubes en Marte.</li>
+<li>Juan Diego Soler.</li>
 </ul>
 
 <h3>
-<a id="semana-7-marzo-6" class="anchor" href="#semana-7-marzo-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 7) Marzo 6</h3>
+<a id="semana-7-septiembre-11" class="anchor" href="#semana-7-septiembre-11" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 7) Septiembre 11</h3>
 
-<ul>
-<li>Jaime E. Forero-Romero. <a href="http://arxiv.org/abs/1503.01509">SETI at Planck Energy: When Particle Physicists Become Cosmic Engineers</a>
-</li>
-<li>María Camila Remolina Gutiérrez. Efectos de rotación y outflows en la línea Lyman-alpha.</li>
-</ul>
+<p>*</p>
 
 <h3>
-<a id="semana-8-marzo-13" class="anchor" href="#semana-8-marzo-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 8) Marzo 13</h3>
+<a id="semana-8-septiembre-18" class="anchor" href="#semana-8-septiembre-18" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 8) Septiembre 18</h3>
 
 <ul>
-<li><strong>Entrega de informe de avance del proyecto</strong></li>
-<li>Andrés García. The fastest unbound star in our Galaxy ejected by a thermonuclear supernova.</li>
-<li>Cristhian Perdomo.</li>
+<li>María Camila Remolina Gutiérrez. The ballet of the free floating planets and my Leiden adventures.</li>
 </ul>
 
 <h3>
@@ -115,47 +100,47 @@
 </ul>
 
 <h3>
-<a id="semana-10-marzo-27" class="anchor" href="#semana-10-marzo-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 10) Marzo 27</h3>
+<a id="semana-10-octubre-2" class="anchor" href="#semana-10-octubre-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 10) Octubre 2</h3>
 
 <ul>
-<li>Mónica Barrera. <a href="http://arxiv.org/abs/1503.00180">Maximum entropy detection of planets around active stars.</a>
-</li>
-<li>Jaime E. Forero-Romero. <a href="http://authors.library.caltech.edu/55970/">Jupiter's decisive role in the inner Solar System's early evolution</a>
-</li>
-<li><a href="http://www.gesctm.unal.com.co/coloquio-escyt/">Primer Coloquio Nacional de Estudios Sociales de la Ciencia y la Tecnología.</a></li>
+<li>Jaime E. Forero-Romero. Una carrera astronómica.</li>
 </ul>
 
 <h3>
-<a id="semana-11-abril-10" class="anchor" href="#semana-11-abril-10" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 11) Abril 10</h3>
+<a id="semana-11-octubre-9" class="anchor" href="#semana-11-octubre-9" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 11) Octubre 9</h3>
 
 <ul>
-<li>Juan Sebastián Andrade. Transformando Mini-Neptunos en Planetas Rocosos en la Zona Habitable de Enanas M.</li>
-<li>Alfonso Escobar</li>
+<li>
 </ul>
 
 <h3>
-<a id="semana-12-abril-17" class="anchor" href="#semana-12-abril-17" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 12) Abril 17</h3>
+<a id="semana-12-octubre-16" class="anchor" href="#semana-12-octubre-16" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 16</h3>
 
 <ul>
-<li>María Paula Rivera</li>
-<li>Johan S. Vargas. Agujeros negros, ficción y realidad</li>
+<li>
 </ul>
 
 <h3>
-<a id="semana-13-abril-24" class="anchor" href="#semana-13-abril-24" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 13) Abril 24</h3>
+<a id="semana-13-octubre-23" class="anchor" href="#semana-13-octubre-23" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 13) Octubre 23</h3>
 
 <ul>
-<li>Jorge García</li>
-<li>Cristian Mauricio Borja</li>
+<li>Christian Poveda</li>
 </ul>
 
 <h3>
-<a id="semana-14-mayo-1" class="anchor" href="#semana-14-mayo-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 14) Mayo 1</h3>
+<a id="semana-14-octubre-30" class="anchor" href="#semana-14-octubre-30" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 14) Octubre 30</h3>
 
-<p><strong>Festivo</strong></p>
+<p>*</p>
 
 <h3>
-<a id="semana-15-mayo-9" class="anchor" href="#semana-15-mayo-9" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 15) Mayo 9</h3>
+<a id="semana-15-noviembre-6" class="anchor" href="#semana-15-noviembre-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 6</h3>
+
+<ul>
+<li>
+</ul>
+
+<h3>
+<a id="semana-16-noviembre-13" class="anchor" href="#semana-16-noviembre-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 13</h3>
 
 <ul>
 <li>
@@ -163,31 +148,23 @@
 </li>
 </ul>
 
-<h3>
-<a id="semana-16" class="anchor" href="#semana-16" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 16)</h3>
-
 <h2>
 <a id="enlaces" class="anchor" href="#enlaces" aria-hidden="true"><span class="octicon octicon-link"></span></a>Enlaces</h2>
 
 <ul>
-<li>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a>
-</li>
 <li>Consejos para dar presentaciones <a href="http://www.astro.caltech.edu/%7Ejlc/ay141_winter2009/index.html">Journal Club @ Caltech</a>
 </li>
-<li>Seminario del planetario de Bogotá. <a href="http://astroseminario-planetario.weebly.com/programacioacuten.html">El espacio para hablar del espacio</a>
-</li>
-<li><a href="http://bogota.sciencehackday.org/">Science Hack Day Bogotá</a></li>
 </ul>
 
 <h2>
 <a id="formalidades" class="anchor" href="#formalidades" aria-hidden="true"><span class="octicon octicon-link"></span></a>Formalidades</h2>
 
-<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale un (1) crédito. La evaluación se divide así: 10% por asistencia y participación en clase, 30% por dar una charla, 30% por presentar un informe sobre el plan de un proyecto para hacer durante el semestre y sus avances y 30% por presentar en un poster los resultados del proyecto.</p>
+<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale un (1) crédito. </p>
 
 <h3>
 <a id="contacto" class="anchor" href="#contacto" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contacto</h3>
 
-<p>El Taller de Astronomía en el 2014-20 será liderado por Jaime E. Forero-Romero. Email: je.forero.</p>
+<p>El Taller de Astronomía en el 2015-20 será liderado por Jaime E. Forero-Romero. Email: je.forero.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/forero/TallerAstronomia">Astrolunch</a> is maintained by <a href="https://github.com/forero">forero</a>.</span>
