--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 <h3>
 <a id="semana-14-octubre-30" class="anchor" href="#semana-14-octubre-30" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 14) Octubre 30</h3>
 
-<p>*</p>
+<ul>
+<li>Ray Díaz</li>
+</ul>
 
 <h3>
 <a id="semana-15-noviembre-6" class="anchor" href="#semana-15-noviembre-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 6</h3>
