Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 <a id="semana-11-octubre-9" class="anchor" href="#semana-11-octubre-9" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 11) Octubre 9</h3>
 
 <ul>
-<li>
+<li>Veronica Arias.</li>
 </ul>
 
 <h3>
 <a id="semana-12-octubre-16" class="anchor" href="#semana-12-octubre-16" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 16</h3>
 
 <ul>
-<li>
+<li>David Esteban Bernal Neira.</li>
 </ul>
 
 <h3>
