--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <a id="semana-15-noviembre-6" class="anchor" href="#semana-15-noviembre-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 6</h3>
 
 <ul>
-<li>
+<li>Santiago Vega.</li>
 </ul>
 
 <h3>
