--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
 <a id="semana-16-noviembre-13" class="anchor" href="#semana-16-noviembre-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 13</h3>
 
 <ul>
+<li><a href="https://github.com/forero/TallerAstronomia/raw/master/pdf/201520/NicolasRocha_20151113.pdf">Detección de patrones en la superficie del Sol</a></li>
 <li>
-<strong>Presentación de los resultados del proyecto en forma de poster</strong><br>
+<a href="https://github.com/forero/TallerAstronomia/raw/master/pdf/201520/AngelaRamirez_20151113.pdf">Posición e intensidad lumínica de Saturno y sus satélites</a><br>
 </li>
 </ul>
 
