Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <section class="main-content">
       <h2>
-<a id="astrolunch" class="anchor" href="#astrolunch" aria-hidden="true"><span class="octicon octicon-link"></span></a>Astrolunch</h2>
+<a id="astrolunch" class="anchor" href="#astrolunch" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Astrolunch</h2>
 
-<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>R112</strong> los viernes de 1PM a 1:50PM.</p>
+<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>AU204</strong> los viernes de 1PM a 1:50PM.</p>
 
 <p>Hablamos de noticias astronómicas, vemos charlas de invitados y desarrollamos pequeños proyectos. Siempre procuramos presentar temas actuales de investigación de una manera accesible a un público con formación no especializada en astronomía (desde estudiantes de primer semetre de matemáticas hasta profesores en química, pasando por estudiantes de doctorado en biología).</p>
 
@@ -31,128 +31,109 @@
 <p>Asi que bienvenidos y ¡no olviden traer comida y cosas para compartir!</p>
 
 <h2>
-<a id="proyectos" class="anchor" href="#proyectos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Proyectos</h2>
+<a id="proyectos" class="anchor" href="#proyectos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proyectos</h2>
 
-<p>Esta es la <a href="https://github.com/forero/TallerAstronomia/blob/master/projects/201520/projects.md">lista de proyectos disponibles</a>.</p>
+<p>Esta es la <a href="https://github.com/forero/TallerAstronomia/blob/master/projects/201610/projects.md">lista de proyectos disponibles</a>.</p>
 
 <h2>
-<a id="programa" class="anchor" href="#programa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programa</h2>
+<a id="programa" class="anchor" href="#programa" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Programa</h2>
 
 <h3>
-<a id="semana-1-julio-31" class="anchor" href="#semana-1-julio-31" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 1) Julio 31</h3>
+<a id="semana-1" class="anchor" href="#semana-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 1)</h3>
 
 <ul>
 <li>Jaime Forero. Cómo funciona Astrolunch.</li>
 </ul>
 
 <h3>
-<a id="semana-2-agosto-7" class="anchor" href="#semana-2-agosto-7" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 7</h3>
+<a id="semana-2" class="anchor" href="#semana-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 2)</h3>
 
 <ul>
-<li><strong>Feriado</strong></li>
+<li>Jaime Forero.</li>
 </ul>
 
 <h3>
-<a id="semana-3-agosto-14" class="anchor" href="#semana-3-agosto-14" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 14</h3>
-
-<ul>
-<li>Jesús Prada. Resultados pasantía de Cornell.</li>
-</ul>
-
-<h3>
-<a id="semana-4-agosto-21" class="anchor" href="#semana-4-agosto-21" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 21</h3>
-
-<ul>
-<li>Felipe Gómez. Relación entre taza de formación estelar y masa de materia oscura.</li>
-</ul>
-
-<h3>
-<a id="semana-5-agosto-28" class="anchor" href="#semana-5-agosto-28" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 28</h3>
-
-<ul>
-<li>Sergio Hernández. Resultados pasantía de Fermilab.</li>
-</ul>
-
-<h3>
-<a id="semana-6-septiembre-4" class="anchor" href="#semana-6-septiembre-4" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 6) Septiembre 4</h3>
-
-<ul>
-<li>Juan Diego Soler.</li>
-</ul>
-
-<h3>
-<a id="semana-7-septiembre-11" class="anchor" href="#semana-7-septiembre-11" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 7) Septiembre 11</h3>
+<a id="semana-3" class="anchor" href="#semana-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 3)</h3>
 
 <p>*</p>
 
 <h3>
-<a id="semana-8-septiembre-18" class="anchor" href="#semana-8-septiembre-18" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 8) Septiembre 18</h3>
+<a id="semana-4" class="anchor" href="#semana-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 4)</h3>
 
-<ul>
-<li>María Camila Remolina Gutiérrez. The ballet of the free floating planets and my Leiden adventures.</li>
-</ul>
+<p>*</p>
 
 <h3>
-<a id="semana-9-septiembre-25" class="anchor" href="#semana-9-septiembre-25" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 9) Septiembre 25</h3>
+<a id="semana-5" class="anchor" href="#semana-5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 5)</h3>
+
+<p>*</p>
+
+<h3>
+<a id="semana-6" class="anchor" href="#semana-6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 6)</h3>
+
+<p>*</p>
+
+<h3>
+<a id="semana-7" class="anchor" href="#semana-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 7)</h3>
+
+<p>*</p>
+
+<h3>
+<a id="semana-8" class="anchor" href="#semana-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 8)</h3>
+
+<p>*</p>
+
+<h3>
+<a id="semana-9" class="anchor" href="#semana-9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 9)</h3>
+
+<p>*</p>
+
+<h3>
+<a id="semana-10" class="anchor" href="#semana-10" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 10)</h3>
 
 <ul>
 <li>Receso</li>
 </ul>
 
 <h3>
-<a id="semana-10-octubre-2" class="anchor" href="#semana-10-octubre-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 10) Octubre 2</h3>
+<a id="semana-11" class="anchor" href="#semana-11" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 11)</h3>
+
+<p>*</p>
+
+<h3>
+<a id="semana-12" class="anchor" href="#semana-12" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 12)</h3>
+
+<p>*</p>
+
+<h3>
+<a id="semana-13" class="anchor" href="#semana-13" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 13)</h3>
 
 <ul>
-<li>Jaime E. Forero-Romero. Una carrera astronómica.</li>
+<li>
 </ul>
 
 <h3>
-<a id="semana-11-octubre-9" class="anchor" href="#semana-11-octubre-9" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 11) Octubre 9</h3>
+<a id="semana-14" class="anchor" href="#semana-14" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 14)</h3>
 
 <ul>
-<li>Veronica Arias.</li>
+<li>
 </ul>
 
 <h3>
-<a id="semana-12-octubre-16" class="anchor" href="#semana-12-octubre-16" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 16</h3>
+<a id="semana-15" class="anchor" href="#semana-15" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 15)</h3>
 
 <ul>
-<li>David Esteban Bernal Neira.</li>
+<li>
 </ul>
 
 <h3>
-<a id="semana-13-octubre-23" class="anchor" href="#semana-13-octubre-23" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 13) Octubre 23</h3>
+<a id="semana-16" class="anchor" href="#semana-16" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 16)</h3>
 
 <ul>
-<li>Christian Poveda</li>
-</ul>
-
-<h3>
-<a id="semana-14-octubre-30" class="anchor" href="#semana-14-octubre-30" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 14) Octubre 30</h3>
-
-<ul>
-<li>Ray Díaz</li>
-</ul>
-
-<h3>
-<a id="semana-15-noviembre-6" class="anchor" href="#semana-15-noviembre-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 6</h3>
-
-<ul>
-<li>Santiago Vega.</li>
-</ul>
-
-<h3>
-<a id="semana-16-noviembre-13" class="anchor" href="#semana-16-noviembre-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 13</h3>
-
-<ul>
-<li>Nicolas Rocha <a href="https://github.com/forero/TallerAstronomia/raw/master/pdf/201520/NicolasRocha_20151113.pdf">Detección de patrones en la superficie del Sol</a>
-</li>
-<li>Angela Ramirez <a href="https://github.com/forero/TallerAstronomia/raw/master/pdf/201520/AngelaRamirez_20151113.pdf">Posición e intensidad lumínica de Saturno y sus satélites</a><br>
-</li>
+<li>Presentación de posters. </li>
 </ul>
 
 <h2>
-<a id="enlaces" class="anchor" href="#enlaces" aria-hidden="true"><span class="octicon octicon-link"></span></a>Enlaces</h2>
+<a id="enlaces" class="anchor" href="#enlaces" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Enlaces</h2>
 
 <ul>
 <li>Consejos para dar presentaciones <a href="http://www.astro.caltech.edu/%7Ejlc/ay141_winter2009/index.html">Journal Club @ Caltech</a>
@@ -160,14 +141,14 @@
 </ul>
 
 <h2>
-<a id="formalidades" class="anchor" href="#formalidades" aria-hidden="true"><span class="octicon octicon-link"></span></a>Formalidades</h2>
+<a id="formalidades" class="anchor" href="#formalidades" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Formalidades</h2>
 
-<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale un (1) crédito. </p>
+<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale un (1) crédito. Todas las personas formalmente inscritas deben elegir un proyecto y dar una presentación oral. Las calificaciones se dividen en presentación oral (33.3%), avance escrito del proyecto (33.3%) y presentación de poster con resultados del proyecto (33.3%).</p>
 
 <h3>
-<a id="contacto" class="anchor" href="#contacto" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contacto</h3>
+<a id="contacto" class="anchor" href="#contacto" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contacto</h3>
 
-<p>El Taller de Astronomía en el 2015-20 será liderado por Jaime E. Forero-Romero. Email: je.forero.</p>
+<p>El Taller de Astronomía en el 2016-10 será liderado por Jaime E. Forero-Romero. Email: je.forero.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/forero/TallerAstronomia">Astrolunch</a> is maintained by <a href="https://github.com/forero">forero</a>.</span>
