Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,37 +55,54 @@
 <h3>
 <a id="semana-3" class="anchor" href="#semana-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 3)</h3>
 
-<p>*</p>
+<ul>
+<li>Jaime Forero.</li>
+</ul>
 
 <h3>
 <a id="semana-4" class="anchor" href="#semana-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 4)</h3>
 
-<p>*</p>
+<ul>
+<li>Gustavo Lozano</li>
+</ul>
 
 <h3>
 <a id="semana-5" class="anchor" href="#semana-5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 5)</h3>
 
-<p>*</p>
+<ul>
+<li>Catalina Martínez</li>
+</ul>
 
 <h3>
 <a id="semana-6" class="anchor" href="#semana-6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 6)</h3>
 
-<p>*</p>
+<ul>
+<li>Julián Mesa</li>
+</ul>
 
 <h3>
 <a id="semana-7" class="anchor" href="#semana-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 7)</h3>
 
-<p>*</p>
+<ul>
+<li>Johanna Piñeres</li>
+<li>Sergio Gutiérrez</li>
+</ul>
 
 <h3>
 <a id="semana-8" class="anchor" href="#semana-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 8)</h3>
 
-<p>*</p>
+<ul>
+<li>Sergio Rodríguez</li>
+<li>Carlos Felipe Durán</li>
+</ul>
 
 <h3>
 <a id="semana-9" class="anchor" href="#semana-9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 9)</h3>
 
-<p>*</p>
+<ul>
+<li>Francisco Rodríguez</li>
+<li>Mauricio Delbarre</li>
+</ul>
 
 <h3>
 <a id="semana-10" class="anchor" href="#semana-10" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 10)</h3>
@@ -97,32 +114,41 @@
 <h3>
 <a id="semana-11" class="anchor" href="#semana-11" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 11)</h3>
 
-<p>*</p>
+<ul>
+<li>Mónica Rosero</li>
+<li>Camilo Corredor</li>
+</ul>
 
 <h3>
 <a id="semana-12" class="anchor" href="#semana-12" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 12)</h3>
 
-<p>*</p>
+<ul>
+<li>Alexander Sierra</li>
+<li>Sebastián Celis</li>
+</ul>
 
 <h3>
 <a id="semana-13" class="anchor" href="#semana-13" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 13)</h3>
 
 <ul>
-<li>
+<li>María Vera</li>
+<li>Benedicto Daniel Campos</li>
 </ul>
 
 <h3>
 <a id="semana-14" class="anchor" href="#semana-14" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 14)</h3>
 
 <ul>
-<li>
+<li>Juan Pablo Velandia</li>
+<li>Sara Bonil</li>
 </ul>
 
 <h3>
 <a id="semana-15" class="anchor" href="#semana-15" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 15)</h3>
 
 <ul>
-<li>
+<li>Laura Barbosa</li>
+<li>José David Botero</li>
 </ul>
 
 <h3>
