Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 <a id="semana-2-enero-29" class="anchor" href="#semana-2-enero-29" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 2) Enero 29</h3>
 
 <ul>
-<li>Jaime Forero. </li>
+<li>Jaime Forero. <a href="https://github.com/forero/TallerAstronomia/raw/master/pdf/201610/20160129_JaimeForero.pdf">Una perspectiva andina de la astronomía en Colombia</a>
+</li>
 </ul>
 
 <h3>
@@ -63,43 +64,45 @@
 </ul>
 
 <h3>
-<a id="semana-4" class="anchor" href="#semana-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 4)</h3>
+<a id="semana-4-febrero-12" class="anchor" href="#semana-4-febrero-12" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 4) Febrero 12</h3>
 
 <ul>
+<li>Juan David Bernal. Los satélites de la galaxia de Andrómeda.</li>
 <li>Gustavo Lozano</li>
 </ul>
 
 <h3>
-<a id="semana-5" class="anchor" href="#semana-5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 5)</h3>
+<a id="semana-5-febrero-19" class="anchor" href="#semana-5-febrero-19" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 5) Febrero 19</h3>
 
 <ul>
+<li>Sergio Hernández. Una experiencia de investigación en Fermilab.</li>
 <li>Catalina Martínez</li>
 </ul>
 
 <h3>
-<a id="semana-6" class="anchor" href="#semana-6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 6)</h3>
+<a id="semana-6-febrero-26" class="anchor" href="#semana-6-febrero-26" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 6) Febrero 26</h3>
 
 <ul>
 <li>Julián Mesa</li>
 </ul>
 
 <h3>
-<a id="semana-7" class="anchor" href="#semana-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 7)</h3>
+<a id="semana-7-marzo-5" class="anchor" href="#semana-7-marzo-5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 7) Marzo 5</h3>
 
 <ul>
-<li>Johanna Piñeres</li>
+<li>Johanna Piñeres. Supernovas y cosmología.</li>
 <li>Sergio Gutiérrez</li>
 </ul>
 
 <h3>
-<a id="semana-8" class="anchor" href="#semana-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 8)</h3>
+<a id="semana-8-marzo-12" class="anchor" href="#semana-8-marzo-12" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 8) Marzo 12</h3>
 
 <ul>
 <li>Sergio Rodríguez</li>
 </ul>
 
 <h3>
-<a id="semana-9" class="anchor" href="#semana-9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 9)</h3>
+<a id="semana-9-marzo-19" class="anchor" href="#semana-9-marzo-19" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 9) Marzo 19</h3>
 
 <ul>
 <li>Francisco Rodríguez</li>
@@ -107,37 +110,37 @@
 </ul>
 
 <h3>
-<a id="semana-10" class="anchor" href="#semana-10" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 10)</h3>
+<a id="semana-10-marzo-26" class="anchor" href="#semana-10-marzo-26" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 10) Marzo 26</h3>
 
 <ul>
 <li>Receso</li>
 </ul>
 
 <h3>
-<a id="semana-11" class="anchor" href="#semana-11" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 11)</h3>
+<a id="semana-11-abril-2" class="anchor" href="#semana-11-abril-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 11) Abril 2</h3>
 
 <ul>
-<li>Mónica Rosero</li>
+<li>Mónica Rosero. Uso de mallas computacionales en la dinámica de fluídos astrofísicos.</li>
 <li>Camilo Corredor</li>
 </ul>
 
 <h3>
-<a id="semana-12" class="anchor" href="#semana-12" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 12)</h3>
+<a id="semana-12-abril-9" class="anchor" href="#semana-12-abril-9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 12) Abril 9</h3>
 
 <ul>
-<li>Alexander Sierra</li>
+<li>Alexander Sierra. Medición de distancias usando paralaje.</li>
 </ul>
 
 <h3>
-<a id="semana-13" class="anchor" href="#semana-13" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 13)</h3>
+<a id="semana-13-abril-16" class="anchor" href="#semana-13-abril-16" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 13) Abril 16</h3>
 
 <ul>
-<li>María Vera</li>
+<li>María Vera. Supernovas y cosmología.</li>
 <li>Benedicto Daniel Campos</li>
 </ul>
 
 <h3>
-<a id="semana-14" class="anchor" href="#semana-14" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 14)</h3>
+<a id="semana-14-abril-23" class="anchor" href="#semana-14-abril-23" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 14) Abril 23</h3>
 
 <ul>
 <li>Juan Pablo Velandia</li>
@@ -145,15 +148,15 @@
 </ul>
 
 <h3>
-<a id="semana-15" class="anchor" href="#semana-15" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 15)</h3>
+<a id="semana-15-abril-30" class="anchor" href="#semana-15-abril-30" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 15) Abril 30</h3>
 
 <ul>
-<li>Laura Barbosa</li>
-<li>José David Botero</li>
+<li>Oscar Trujillo. El poder del lado oscuro.</li>
+<li>José David Botero. ¿Cómo observar el espacio?. Acceso a telescopios remotos.</li>
 </ul>
 
 <h3>
-<a id="semana-16" class="anchor" href="#semana-16" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 16)</h3>
+<a id="semana-16-mayo-7" class="anchor" href="#semana-16-mayo-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 16) Mayo 7</h3>
 
 <ul>
 <li>Presentación de posters. </li>
