Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <a id="semana-4-febrero-12" class="anchor" href="#semana-4-febrero-12" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 4) Febrero 12</h3>
 
 <ul>
-<li>Juan David Bernal. Los satélites de la galaxia de Andrómeda.</li>
+<li>David Bernal. Los satélites de la galaxia de Andrómeda.</li>
 <li>Gustavo Lozano</li>
 </ul>
 
@@ -83,7 +83,8 @@
 <a id="semana-6-febrero-26" class="anchor" href="#semana-6-febrero-26" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 6) Febrero 26</h3>
 
 <ul>
-<li>Julián Mesa</li>
+<li>Julián Mesa.</li>
+<li>Jaime Forero.</li>
 </ul>
 
 <h3>
