Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <a id="semana-8-marzo-12" class="anchor" href="#semana-8-marzo-12" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 8) Marzo 12</h3>
 
 <ul>
-<li>Sergio Rodríguez</li>
+<li>Sergio Rodríguez. </li>
 </ul>
 
 <h3>
@@ -125,28 +125,29 @@
 </ul>
 
 <h3>
-<a id="semana-11-abril-2" class="anchor" href="#semana-11-abril-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 11) Abril 2</h3>
+<a id="semana-11-abril-1" class="anchor" href="#semana-11-abril-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 11) Abril 1</h3>
 
 <ul>
 <li>Mónica Rosero. Uso de mallas computacionales en la dinámica de fluídos astrofísicos.</li>
+<li>Jaime Forero. El antropoceno y vida en otros planetas.</li>
 </ul>
 
 <h3>
-<a id="semana-12-abril-9" class="anchor" href="#semana-12-abril-9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 12) Abril 9</h3>
+<a id="semana-12-abril-8" class="anchor" href="#semana-12-abril-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 12) Abril 8</h3>
 
 <ul>
 <li>Alexander Sierra. Medición de distancias usando paralaje.</li>
 </ul>
 
 <h3>
-<a id="semana-13-abril-16" class="anchor" href="#semana-13-abril-16" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 13) Abril 16</h3>
+<a id="semana-13-abril-15" class="anchor" href="#semana-13-abril-15" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 13) Abril 15</h3>
 
 <ul>
 <li>María Vera. Supernovas y cosmología.</li>
 </ul>
 
 <h3>
-<a id="semana-14-abril-23" class="anchor" href="#semana-14-abril-23" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 14) Abril 23</h3>
+<a id="semana-14-abril-22" class="anchor" href="#semana-14-abril-22" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 14) Abril 22</h3>
 
 <ul>
 <li>Juan Pablo Velandia</li>
@@ -165,7 +166,7 @@
 <a id="semana-16-mayo-7" class="anchor" href="#semana-16-mayo-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 16) Mayo 7</h3>
 
 <ul>
-<li>Presentación de posters. </li>
+<li>Presentación de resultados finales de los proyectos.</li>
 </ul>
 
 <h2>
