Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 <ul>
 <li>Mónica Rosero. Uso de mallas computacionales en la dinámica de fluídos astrofísicos.</li>
-<li>Jaime Forero. El antropoceno y vida en otros planetas.</li>
+<li>Jaime Forero. Apocalipsis astronómicos.</li>
 </ul>
 
 <h3>
