Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
 
 <ul>
 <li>Alexander Sierra. Medición de distancias usando paralaje.</li>
+<li>Jaime Forero. <a href="http://arxiv.org/pdf/1604.01400v1.pdf">A 17-billion-solar-mass black hole in a group galaxy with a diffuse core</a>. <a href="http://arxiv.org/pdf/1112.1078v1.pdf">Two ten-billion-solar-mass black holes at the centres of giant elliptical galaxies</a>
+</li>
 </ul>
 
 <h3>
