Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,8 +51,17 @@
 <h3>
 <a id="semana-3-agosto-19" class="anchor" href="#semana-3-agosto-19" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 3) Agosto 19</h3>
 
+<ul>
+<li>Sergio Hernández.</li>
+</ul>
+
 <h3>
 <a id="semana-4-agosto-26" class="anchor" href="#semana-4-agosto-26" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 4) Agosto 26</h3>
+
+<ul>
+<li>David Bernal.<br>
+</li>
+</ul>
 
 <h3>
 <a id="semana-5-septiembre-2" class="anchor" href="#semana-5-septiembre-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 5) Septiembre 2</h3>
@@ -63,26 +72,51 @@
 <h3>
 <a id="semana-7-septiembre-16" class="anchor" href="#semana-7-septiembre-16" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 7) Septiembre 16</h3>
 
+<ul>
+<li>Germán Chaparro.</li>
+</ul>
+
 <h3>
 <a id="semana-8-septiembre-23" class="anchor" href="#semana-8-septiembre-23" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 8) Septiembre 23</h3>
 
 <h3>
 <a id="semana-9-octubre-7" class="anchor" href="#semana-9-octubre-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 9) Octubre 7</h3>
 
+<ul>
+<li>María Gracia Batista Rojas.<br>
+</li>
+</ul>
+
 <h3>
 <a id="semana-10-octubre-14" class="anchor" href="#semana-10-octubre-14" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 10) Octubre 14</h3>
+
+<ul>
+<li>David Bernal.</li>
+</ul>
 
 <h3>
 <a id="semana-11-octubre-21" class="anchor" href="#semana-11-octubre-21" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 11) Octubre 21</h3>
 
+<ul>
+<li>Verónica Arias. </li>
+</ul>
+
 <h3>
 <a id="semana-12-octubre-28" class="anchor" href="#semana-12-octubre-28" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 12) Octubre 28</h3>
+
+<ul>
+<li>Beatriz Sabogal. </li>
+</ul>
 
 <h3>
 <a id="semana-13-noviembre-4" class="anchor" href="#semana-13-noviembre-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 13) Noviembre 4</h3>
 
 <h3>
 <a id="semana-14-noviembre-11" class="anchor" href="#semana-14-noviembre-11" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 14) Noviembre 11</h3>
+
+<ul>
+<li>Santiago Vargas. </li>
+</ul>
 
 <h3>
 <a id="semana-15-noviembre-18" class="anchor" href="#semana-15-noviembre-18" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 15) Noviembre 18</h3>
