--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <a id="semana-2-agosto-12" class="anchor" href="#semana-2-agosto-12" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 2) Agosto 12</h3>
 
 <ul>
-<li>Jaime Forero. </li>
+<li>Jaime Forero.  Detección de Ondas Gravitacionales por LIGO: entendiendo la importancia del gran descubrimiento científico del 2016. </li>
 </ul>
 
 <h3>
