--- a/index.html
+++ b/index.html
@@ -66,8 +66,16 @@
 <h3>
 <a id="semana-5-septiembre-2" class="anchor" href="#semana-5-septiembre-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 5) Septiembre 2</h3>
 
+<ul>
+<li>Jaime Forero. Noticias astronómicas de la semana.</li>
+</ul>
+
 <h3>
 <a id="semana-6-septiembre-9" class="anchor" href="#semana-6-septiembre-9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 6) Septiembre 9</h3>
+
+<ul>
+<li>Jaime Forero. Noticias astronómicas de la semana.</li>
+</ul>
 
 <h3>
 <a id="semana-7-septiembre-16" class="anchor" href="#semana-7-septiembre-16" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 7) Septiembre 16</h3>
@@ -78,6 +86,10 @@
 
 <h3>
 <a id="semana-8-septiembre-23" class="anchor" href="#semana-8-septiembre-23" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 8) Septiembre 23</h3>
+
+<ul>
+<li>Jaime Forero. Noticias astronómicas de la semana.</li>
+</ul>
 
 <h3>
 <a id="semana-9-octubre-7" class="anchor" href="#semana-9-octubre-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 9) Octubre 7</h3>
@@ -111,6 +123,10 @@
 <h3>
 <a id="semana-13-noviembre-4" class="anchor" href="#semana-13-noviembre-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 13) Noviembre 4</h3>
 
+<ul>
+<li>Jaime Forero. Noticias astronómicas de la semana.</li>
+</ul>
+
 <h3>
 <a id="semana-14-noviembre-11" class="anchor" href="#semana-14-noviembre-11" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 14) Noviembre 11</h3>
 
@@ -120,6 +136,10 @@
 
 <h3>
 <a id="semana-15-noviembre-18" class="anchor" href="#semana-15-noviembre-18" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 15) Noviembre 18</h3>
+
+<ul>
+<li>Jaime Forero. Noticias astronómicas de la semana.</li>
+</ul>
 
 <h2>
 <a id="formalidades" class="anchor" href="#formalidades" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Formalidades</h2>
