Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <a id="semana-6-septiembre-9" class="anchor" href="#semana-6-septiembre-9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 6) Septiembre 9</h3>
 
 <ul>
-<li>Jaime Forero. Noticias astronómicas de la semana.</li>
+<li>Jaime Forero. Los orígenes cuánticos del Universo.</li>
 </ul>
 
 <h3>
