Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h2>
 <a id="astrolunch" class="anchor" href="#astrolunch" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Astrolunch</h2>
 
-<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>TK602</strong> los viernes de 1PM a 1:50PM.</p>
+<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>TX602</strong> los viernes de 1PM a 1:50PM.</p>
 
 <p>Hablaremos de noticias astronómicas y vemos charlas de astrónomos-astrofísicos invitados. Siempre procuramos presentar temas actuales de investigación de una manera accesible a un público sin formación especializada en astronomía (desde estudiantes de primer semetre de matemáticas hasta profesores de química, pasando por estudiantes de doctorado en biología).</p>
 
