Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 <a id="semana-3-agosto-19" class="anchor" href="#semana-3-agosto-19" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 3) Agosto 19</h3>
 
 <ul>
-<li>Sergio Hernández.</li>
+<li>Juan Diego Soler. <strong>De qué hablo cuando hablo del Universo</strong>. <em>La luz es la herramienta de trabajo del astrónomo. Nuestra vision actual del universo ha sido posible gracias a las observaciones hechas en observatorios en la superficie de la Tierra pero tambien mas allá de la atmósfera, usando instrumentos tan diversos como las enormes antenas de ALMA, el telescopio espacial Hubble y hasta telescopios que viajan en globos sobre la Antártida. Esta charla es un viaje informal por los distintos tipos de luz que conforman el espectro electromagnético y los instrumentos que nos permiten hacernos una idea de como funciona el universo.</em>
+</li>
 </ul>
 
 <h3>
