Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <a id="semana-4-agosto-26" class="anchor" href="#semana-4-agosto-26" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 4) Agosto 26</h3>
 
 <ul>
-<li>David Bernal.<br>
+<li>David Bernal.  <strong>Identificando galaxias ricas en HI y ultra difusas</strong>
 </li>
 </ul>
 
@@ -96,7 +96,7 @@
 <a id="semana-9-octubre-7" class="anchor" href="#semana-9-octubre-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 9) Octubre 7</h3>
 
 <ul>
-<li>María Gracia Batista Rojas.<br>
+<li>María Gracia Batista Rojas.  <strong>Presente y  futuro de nuestros telescopios espaciales y terrestres</strong>
 </li>
 </ul>
 
@@ -104,14 +104,16 @@
 <a id="semana-10-octubre-14" class="anchor" href="#semana-10-octubre-14" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 10) Octubre 14</h3>
 
 <ul>
-<li>David Bernal.</li>
+<li>David Bernal. <strong>Acotando las velocidades tangenciales de los satélites de Andrómeda</strong>
+</li>
 </ul>
 
 <h3>
 <a id="semana-11-octubre-21" class="anchor" href="#semana-11-octubre-21" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 11) Octubre 21</h3>
 
 <ul>
-<li>Verónica Arias. </li>
+<li>Verónica Arias. <strong>Galaxias enanas en el grupo Local</strong>
+</li>
 </ul>
 
 <h3>
@@ -132,7 +134,8 @@
 <a id="semana-14-noviembre-11" class="anchor" href="#semana-14-noviembre-11" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 14) Noviembre 11</h3>
 
 <ul>
-<li>Santiago Vargas. </li>
+<li>Santiago Vargas.  <strong>Fenómenos explosivos en la atmósfera solar a diferentes escalas</strong>
+</li>
 </ul>
 
 <h3>
